--- a/2_2/Системное программирование/labs/lab04/Makefile
+++ b/2_2/Системное программирование/labs/lab04/Makefile
@@ -1,13 +1,16 @@
-all: lab
+# all: lab
 
-lab: main.o funcs.o
-	g++ main.o funcs.o -o lab
+lab: main.o funcs.o task1.o
+	g++ main.o funcs.o task1.o -o lab
 
 main.o: main.cpp
 	g++ -c main.cpp
 
-factorial.o: funcs.cpp
+funcs.o: funcs.cpp
 	g++ -c funcs.cpp
+
+task1.o: task1.cpp
+	g++ -c task1.cpp
 
 clean:
 	rm -rf *.o lab
