--- a/3_1/LinuxLabs/.vscode/settings.json
+++ b/3_1/LinuxLabs/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "iostream": "cpp",
         "ostream": "cpp",
-        "thread": "cpp"
-    }
+        "thread": "cpp",
+        "__config": "cpp",
+        "__threading_support": "cpp",
+        "memory": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
